<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crash"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/divideByZero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_pointer_exception"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/indexOutOfBound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/index_out_of_bound_exception"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/classCastExeption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_cast_exception"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/crashLogActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_crash_list"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NetWrok"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/networkError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_error"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/appLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_log"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/rubbles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rubbles"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/networkLogActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_network_list"
        android:textColor="@color/white"
        android:textSize="14sp" />


</LinearLayout>